<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/semi_black"
    tools:context=".fragment.StatusFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/dp15"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/layoutImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="@dimen/dp5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/danilla"/>

            <ImageButton
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:background="@drawable/btn_round_green"
                android:src="@drawable/ic_add"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvStatusSaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20"
            android:text="@string/status_saya"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginStart="@dimen/dp20"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/layoutImage"/>

        <TextView
            android:id="@+id/tvDeskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/semi_gray"
            android:textSize="@dimen/sp16"
            android:layout_marginStart="@dimen/dp20"
            android:text="@string/deskripsi"
            app:layout_constraintTop_toBottomOf="@id/tvStatusSaya"
            app:layout_constraintStart_toEndOf="@id/layoutImage" />

        <TextView
            android:id="@+id/tvstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/semi_gray"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/pembaruan_terkini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutImage"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp20"
            android:src="@drawable/ic_edit"
            app:backgroundTint="@color/gray"
            app:tint="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/btnCreate"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp20"
            android:src="@drawable/ic_camera"
            app:backgroundTint="@color/second_green"
            app:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>